--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,13 +18,15 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.MIXHOST_SECRET_KEY }} # GitHubに登録したmixhostへの秘密鍵を指定
 
-      # - name: create env file
-      #   run: |
-      #     echo "VITE_SUPABASE_URL=$VITE_SUPABASE_URL" > .env
-      #     echo "VITE_SUPABASE_ANON_KEY=$VITE_SUPABASE_ANON_KEY" >> .env
-      #   env:
-      #     VITE_SUPABASE_URL:
-      #     VITE_SUPABASE_ANON_KEY:
+      - name: create env file
+        run: |
+          echo "VITE_GOOGLE_CLIENT_ID=$VITE_GOOGLE_CLIENT_ID" > .env
+          echo "VITE_GOOGLE_API_KEY=$VITE_GOOGLE_API_KEY" >> .env
+          echo "VITE_SCOPES=$VITE_SCOPES" >> .env
+        env:
+          VITE_GOOGLE_CLIENT_ID: ${{ secrets.VITE_GOOGLE_CLIENT_ID }}
+          VITE_GOOGLE_API_KEY: ${{ secrets.VITE_GOOGLE_API_KEY }}
+          VITE_SCOPES: ${{ secrets.VITE_SCOPES }}
 
       - name: vite build
         run: |
