add google analytics

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,5 @@
 VITE_GOOGLE_CLIENT_ID=
 VITE_GOOGLE_API_KEY=
 VITE_SCOPES="https://www.googleapis.com/auth/calendar.readonly https://www.googleapis.com/auth/calendar.events"
+
+VITE_GA_TRACKING_ID=
